third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/fun_wrapper.exp
module 0x66::test {
    struct Work has drop {
        _0: |u64|(u64) has drop,
    }
    fun t1(): bool {
        Work{_0: |arg0| __lambda__1__t1(arg0)} == Work{_0: |arg0| __lambda__2__t1(arg0)}
    }
    fun __lambda__1__t1(x: u64): u64 {
        x + 1
    }
    fun __lambda__2__t1(x: u64): u64 {
        x + 2
    }
    fun t2() {
        take_work(Work{_0: |arg0| __lambda__1__t2(arg0)});
    }
    fun __lambda__1__t2(x: u64): u64 {
        x + 1
    }
    fun take_work(_work: Work) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
  ┌─ fun_wrapper.move:8:9
  │
8 │     fun __lambda__1__t1(x: u64): u64 {
  │         ^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__t1'. Function names cannot start with '_'

error: invalid name
   ┌─ fun_wrapper.move:11:9
   │
11 │     fun __lambda__2__t1(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^ Invalid function name '__lambda__2__t1'. Function names cannot start with '_'

error: invalid name
   ┌─ fun_wrapper.move:17:9
   │
17 │     fun __lambda__1__t2(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__t2'. Function names cannot start with '_'
